# mlops-pipeline

./: .env  .gitignore  LICENSE  Makefile  README.md  data.dvc  db.env  docker_orchestrator.py  mise.toml  mlflow.env  prod.env  pyproject.toml  requirements.txt  setup_dvc  train.py
docker/: .gitignore  Dockerfile  compose.yaml  logistic_regression.Dockerfile  mlflow.Dockerfile  mlflow.env  prod.Dockerfile  pytorch.Dockerfile  random_forest.Dockerfile  svm.Dockerfile  train.Dockerfile  xgboost.Dockerfile
docker/minio-data/.minio.sys/: format.json
docker/requirements/: requirements.pytorch.txt  requirements.sklearn.txt  requirements.xgboost.txt
images/source/: kubernetes-pod-diagram.mermaid  system-architecture.mermaid
images/src/: component-interaction.mermaid  whole-pipeline.mermaid
scripts/: remove_experiments.sh
src/: data_gen.py
src/config/: metrics_config.yaml  model_deployment_config.yaml  training_config.yaml
src/data_gen/: data_gen.py
src/inference_api/: inference_test.py
src/model_query/: metrics_config.yaml  model_tracker.py
src/orchestrators/: docker_model_deployment.py  docker_orchestrator.py  kubernetes_model_deployment.py  kubernetes_orchestrator.py
src/training/: config.yaml  train.py  train_logistic_regression.py  train_pytorch_mlp.py  train_random_forest.py  train_svm.py  train_xgboost.py
templates/: job_template.yaml  production_deployment_template.yaml  production_ingress_template.yaml  production_service_template.yaml
