[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.59.2",
    "dvc-s3>=3.2.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn==1.6.1",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
