[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.3",
    "dotenv>=0.9.9",
    "dvc>=3.59.2",
    "dvc-s3>=3.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
